# Monte_Carlo-LP_vs_VAR

./: .gitignore  README.md  main.blg  pyproject.toml  requirements.txt
Documents/: .latexmkrc  CH4_Findings.md  biber_debug.txt  bibtex.bib  main.aux  main.bbl  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.lof  main.out  main.run.xml  main.synctex(busy)  main.tex  main.toc  main_ext_1.counts.txt  main_ext_1.tex  main_ext_2.counts.txt  main_ext_2.tex  test.tex  wordcount.sh
Documents/appendix/: appendix.tex
Documents/chap/: Abstract_A.tex  Abstract_B.tex  appendix.tex  chap_1.tex  chap_1A.tex  chap_1B.tex  chap_2.tex  chap_3.tex  chap_3_0.tex  chap_3_1.tex  chap_3_2.tex  chap_4.tex  chap_4_0.tex  chap_4_2.tex  chap_5.tex  chap_6.tex  chap_6A.tex  chap_6B.tex  chap_7.tex  x_appendix.tex  x_text_dump.tex
Documents/settings/: AI_decl.tex  packages.tex  titlepage.tex  titlepage_A.tex  titlepage_B.tex
Presentation/: main.nav  main.snm  main.tex
Presentation/chap/: 1_theory.tex  2_studydesign.tex  3A_baseline.tex  3B_dynamic.tex  3C_functional.tex  4_discussion.tex  5_conclusion.tex
Presentation/settings/: settings.tex
experiments/: Base_Case.ipynb  Extension_Dynamic_MisSpec.ipynb  Extension_Functional_MisSpec.ipynb  Extension_Non-Linear_DGP.ipynb  Extension_Nonlinear_DGP.ipynb  example_use.ipynb  run_example.py
experiments/Base_Case/: HIGH_Base_Case.ipynb  LOW_Base_Case.ipynb  MID_Base_Case.ipynb
experiments/Extension_Dynamic_Misspec/: HIGH_Extension_Dynamic_MisSpec.ipynb  LOW_Extension_Dynamic_MisSpec.ipynb  (+1 more)
notebooks/: 01_ar1_on_ar2.ipynb
(+23 files in other folders)
